--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "postinstall": "next telemetry disable"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.5",
+    "@mui/material-nextjs": "^5.15.5",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.8",
+    "jose": "^5.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "next": "14.2.1",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
