--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,11 @@ services:
       - .:/app
       - /app/node_modules
       - /app/.next
+  ecommerce-prod:
+    build:
+      context: .
+      target: runner
+    ports:
+      - "3001:3000"
+    environment:
+      - NODE_ENV=production
