--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jose": "^5.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1",
+    "next": "14.3.0-canary.5",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
